# video-message-definitions

./: .gitignore  README.md
.github/: CODEOWNERS  codeowners
.github/workflows/: ci.yaml  packages.yaml  protobuf-nuget.yml
cpp/: CMakeLists.txt  main.cpp
csharp/: MyCloudApp.csproj  Program.cs
protos/: mymessages.proto  protos.nuspec
